<resources>
    <string name="app_name">RadioUpnp</string>
    <string name="radio_service_description">Streams radio for RadioUpnp app</string>
    <string name="upnp_service_description">Handles UPnP/DLNA devices for RadioUpnp app</string>
    <string name="http_service_description">Handles HTTP request for RadioUpnp app</string>
    <string name="copyright">Copyright &#169; 2018 Stephane Treuchot</string>
    <string name="credit">Credit:</string>
    <string name="credit_0">- Icon by shareicon.net</string>
    <string name="credit_1">- Cling [CDDL]</string>
    <string name="credit_2">- Jetty [Apache License 2.0]</string>
    <string name="credit_3">- Apache Commons IO [Apache License 2.0]</string>
    <string name="credit_4">- Jsoup [MIT License]</string>
    <string name="credit_5">- ExoPlayer [Apache License 2.0]</string>
    <string name="license">License MIT: &lt;https://opensource.org/licenses/MIT&gt;</string>
    <string name="free_software">This is a free software; see sources for copying conditions.</string>
    <string name="version">Version: </string>
    <string name="void_string"> </string>
    <string name="no_web_page">No web page for this radio</string>
    <string name="radio_connection_error">Radio connection error</string>
    <string name="no_internet">Internet connexion not available</string>
    <string name="radio_connection_waiting">Radio service is starting, please wait&#8230;</string>
    <string name="radio_no_radio">No radio</string>
    <string name="onrad_io_search">Search with open web <b>OnRad.io</b> database;/nPlease note that data may be outdated:</string>
    <string name="dlna_search_reset">UPnP/DLNA search reset</string>
    <string name="dlna_selection">UPnP/DLNA device selection:\n</string>
    <string name="no_dlna_selection">No UPnP/DLNA device selected</string>
    <string name="radio_name">RADIO NAME</string>
    <string name="searched_name">SEARCHED NAME</string>
    <string name="radio_service_notification_name">Radio display and control</string>
    <string name="optional"><b>Optional:</b></string>
    <string name="legend_streaming_url">Streaming URL</string>
    <string name="legend_streaming_url_example">http://direct.myradio.fr/live/myradio.mp3</string>
    <string name="legend_page_url">Web page URL (<b>SEARCH ICON</b> to fetch icon)</string>
    <string name="legend_page_url_example">http://direct.myradio.fr</string>
    <string name="icon_url">Icon URL (<b>SEARCH ICON</b> to fetch), or <b>BROWSE</b></string>
    <string name="icon_url_example">https://www.my_cloud.com/icons/my_icon.png</string>
    <string name="radio_definition_error">Radio definition not well formed</string>
    <string name="device_no_device_yet">No device found yet, please wait&#8230;</string>
    <string name="live_streaming">Live streaming</string>
    <string name="no_icon_found">Icon search in Icon URL or Web page URL failed!</string>
    <string name="no_local_icon">No valid local icon found</string>
    <string name="connection_test_failed">Connection test failed</string>
    <string name="mime_not_authorized">Warning! MIME type is not authorized.\nAudio content: </string>
    <string name="connection_test_aborted">No connection test: invalid Streaming URL</string>
    <string name="connection_test_successful">Connection test successful.\nAudio content: </string>
    <string name="service_not_available">Service not available</string>
    <string name="lan_required">No LAN/Wifi connection found for UPnP/DLNA function</string>
    <string name="radio_long_press">Long press opens web site</string>
    <string name="play_long_press">Long press stops radio</string>
    <string name="information_press">Click on playing radio icon to display current playlist</string>
    <string name="dlna_enable">Short or Long press: search or reset UPnP/DLNA devices.\n\nConnection may need connection authorization.\nBad Wifi may hinder connection quality.</string>
    <string name="preferred_radios">Display only preferred radios.\nPreferred radios are set in Modify screen.</string>
    <string name="wait_search">Search in progress.\nMay take some time, please wait&#8230;</string>
    <string name="icon_updated">Icon updated!</string>
    <string name="donation_button_close">Close</string>
    <string name="donation_description">Do you find this application useful?\nSupport its development by sending a donation to the developer.\nThanks a lot!</string>
    <string name="donation_google_android_market_description">(Google charges a fee of 15%)</string>
    <string name="donation_alert_dialog_title">Error occurred</string>
    <string name="donation_alert_dialog_try_again">Please try again later&#8230;</string>
    <string name="dar_fm_radio_button">Search with <b>OnRad.io</b> server</string>
    <string name="dar_fm_failure">Note: trouble while fetching data in <b>OnRad.io</b> server</string>
    <string name="image_from_url_radio_button">Manual fill in</string>
    <string name="kbs">kb/s</string>
    <string name="preferred">Preferred</string>
    <string name="not_to_modify">Current radio cannot be edited</string>
    <string name="not_to_delete">Current radio cannot be deleted</string>
    <string name="report_error">Error, report could not be generated</string>
    <string name="radio_database_update_failed">Internal error: radio modification failed!</string>
    <string name="notification_needed">This app is intended to be used with notifications enabled</string>
    <string name="import_message">[GO!] searches a remote already DISPLAYED RadioUpnp app on local network, and imports all new (streaming URL) radios.\nPlease wait (a few seconds) for result message.</string>
    <string name="radio_garden_share">Great app <b>Radio Garden</b> can be used to search a new radio.\n\n<b>Share</b> back as shown.\nThen choose <b>RadioUpnp</b> in Android share screen.\nRadio is added automatically (take a few seconds)!\n</string>
    <string name="import_connection_failed">No remote app found. Please verify!</string>
    <string name="import_action_failed">Unable to execute import action from remote app</string>
    <string name="import_successful">Import successful!</string>
    <string name="import_failed">Import failed!</string>
    <string name="import_no_import">Import failed: no data found!</string>
    <string name="no_data">No playlist data found</string>
    <string name="dump_error">Error: local export file could not be generated</string>
    <string name="export_done">Export file "radios.csv" created.\nInternal Storage: Android/data/com.watea.radio_upnp/files</string>
    <string name="radio_garden_radio_added">Radio Garden radio added!</string>
    <string name="try_to_add_from_radio_garden">Try to add from Radio Garden.\nMay take some time, please wait&#8230;</string>
    <string name="play_store_not_installed">Play Store not available.\nRadio Garden cannot be installed!</string>
    <string-array name="donation_google_catalog_values">
        <item>0,50 €</item>
        <item>1,00 €</item>
        <item>1,50 €</item>
    </string-array>
    <string-array name="google_products">
        <item>radio_upnp.donation.1</item>
        <item>radio_upnp.donation.2</item>
        <item>radio_upnp.donation.3</item>
    </string-array>
    <string name="title_main">Play</string>
    <string name="title_item_add">Add</string>
    <string name="title_modify">Modify</string>
    <string name="title_donate">Donate</string>
    <string name="title_about">About</string>
    <string name="title_log">Report</string>
    <string name="title_import">Import</string>
    <string name="title_export">Export</string>
    <string name="title_search">Search</string>
    <string name="action_browse">Browse</string>
    <string name="icon_search">Search icon</string>
</resources>