<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:drawablePadding="@dimen/app_horizontal_margin"
        android:hint="@string/radio_name"
        android:importantForAutofill="no"
        android:inputType="textCapCharacters"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_horizontal_margin"
        android:text="@string/legend_streaming_url" />

    <EditText
        android:id="@+id/url_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/legend_streaming_url_example"
        android:importantForAutofill="no"
        android:inputType="textUri" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/optional" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_horizontal_margin"
        android:text="@string/icon_url" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/icon_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/browse_button"
            android:hint="@string/icon_url_example"
            android:importantForAutofill="no"
            android:inputType="textUri" />

        <Button
            android:id="@+id/browse_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/action_browse"
            android:textColor="?attr/android:textColorHighlight" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_horizontal_margin"
        android:text="@string/legend_page_url" />

    <EditText
        android:id="@+id/web_page_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/legend_page_url_example"
        android:importantForAutofill="no"
        android:inputType="textUri" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/icon_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin"
            android:text="@string/icon_search"
            android:textColor="?attr/android:textColorHighlight" />

        <ProgressBar
            android:id="@+id/icon_search_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="?attr/android:textColorSecondary"
            android:visibility="invisible" />

    </FrameLayout>

</LinearLayout>